xraylib/Acq.h

/** 
* AcquisitionDesc defines a data structure that is 
* used by all functions of XISL. It contains all 
* required parameters for the acquisition.
* Access to the data fields is only possible via 
* the XISL API functions. HACQDESC defines a HANLDE to the acquisition descriptor.
* @see AcquisitionDesc
* @ingroup enum
**/
typedef HANDLE HACQDESC;
    #define HIS_RETURN _DLL_API UINT WINAPI
/* internal voltages and currents of Gen2 detector */
typedef struct DETECTOR_CURRENT_VOLTAGE{
  int iV1;
  int imA1;
  int iV2;
  int imA2;
  int iV3;
  int imA3;
}DETECTOR_CURRENT_VOLTAGE;
/**
* @ingroup enum
*/
typedef enum XRpad_ChargeMode
{
    XRpad_NOT_CHARGING = 0,
    XRpad_CHARGING_SLOW = 1,
    XRpad_CHARGING_NORMAL = 2,
    XRpad_CHARGING_FAST = 3,
    XRpad_FULLY_CHARGED = 4,
    XRpad_DISCHARGING = 5
} XRpad_ChargeMode;
/**
* @ingroup enum
*/
typedef enum XRpad_BatteryPresence
{
    XRpad_NO_BATTERY = 0,
    XRpad_BATTERY_INSERTED = 1,
    XRpad_DUMMY_INSERTED = 2
} XRpad_BatteryPresence;
/**
* @ingroup enum
*/
typedef struct XRpad_BatteryStatus
{
    XRpad_BatteryPresence   presence;
    int                     design_capacity;
    int                     remaining_capacity;
    int                     charge_state;
    XRpad_ChargeMode        charge_mode;
    int                     cycle_count;
    int                     temperature;
    int                     authenticated;
    int                     health;
} XRpad_BatteryStatus;
/**
 * @ingroup enum
 */
typedef struct XRpad_VersionInfo
{
    char subversion[256];
    char linux_kernel[32];
    char software[32];
    char hwdriver[32];
    char zynq_firmware[32];
    char spartan_firmware[32];
    char msp_firmware[32];
    char pld_firmware[32];
    char xrpd[32];
    char wlan[32];
} XRpad_VersionInfo;
HIS_RETURN Acquisition_GetSDCardInfo(HACQDESC hAcqDesc, unsigned int *total, unsigned int *avail);
HIS_RETURN Acquisition_SetFakeTemperature(HACQDESC hAcqDesc, BOOL bEnableFakeMode, int iFakeTemperature);
HIS_RETURN Acquisition_IdentifyDevice(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_Resend_All_Messages(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_GetLocation(HACQDESC hAcqDesc, unsigned int *location);
HIS_RETURN Acquisition_GetNetwork(HACQDESC hAcqDesc, unsigned int *network);
HIS_RETURN Acquisition_SetNetworkSpeed(HACQDESC hAcqDesc, unsigned int network);
HIS_RETURN Acquisition_SetIdleTimeout(HACQDESC hAcqDesc, unsigned short timeout);
HIS_RETURN Acquisition_SetChargeMode(HACQDESC hAcqDesc, unsigned char charge_mode);
HIS_RETURN Acquisition_VerifyGenuineness(HACQDESC hAcqDesc, char (*msg)[128], size_t *msg_len, unsigned char (*md)[20]);
HIS_RETURN Acquisition_SetPrivateKey(HACQDESC hAcqDesc, unsigned char (*key_old)[64], unsigned char (*key_new)[64]);
HIS_RETURN Acquisition_SetTemperatureTimeout(HACQDESC hAcqDesc, unsigned short timeout);
HIS_RETURN Acquisition_ResetTemperatureTimeout(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_SetTemperatureThresholds(HACQDESC hAcqDesc, unsigned int threshold_warning, unsigned int threshold_critical);
HIS_RETURN Acquisition_GetTemperatureThresholds(HACQDESC hAcqDesc, unsigned int *threshold_warning, unsigned int *threshold_critical);
HIS_RETURN Acquisition_GetBatteryStatus(HACQDESC hAcqDesc, XRpad_BatteryStatus *batteryStatus);
HIS_RETURN Acquisition_Get_Current_Voltage(HACQDESC hAcqDesc, DETECTOR_CURRENT_VOLTAGE *pstructCurrentVoltage);
HIS_RETURN Acquisition_CreateFakeShockWarningLevel(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_CreateFakeShockCriticalLevel(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_FactoryResetShock(HACQDESC hAcqDesc);
HIS_RETURN Acquisition_SetSystemTime(HACQDESC hAcqDesc, char* cDateTime);
HIS_RETURN Acquisition_GetPowerstate(HACQDESC hAcqDesc, unsigned int *powerstate);
HIS_RETURN Acquisition_GetAutoPowerOnLocations(HACQDESC hAcqDesc, unsigned int *autopoweronlocations);
HIS_RETURN Acquisition_SetAutoPowerOnLocations(HACQDESC hAcqDesc, unsigned int autopoweronlocations);
HIS_RETURN Acquisition_GetChargeMode(HACQDESC hAcqDesc, unsigned char* charge_mode_req, unsigned char* charge_mode_charger);
HIS_RETURN Acquisition_SetSDCardTimeout(HACQDESC hAcqDesc, unsigned short sdcard_timeout);
HIS_RETURN Acquisition_GetSDCardTimeout(HACQDESC hAcqDesc, unsigned short *sdcard_timeout);
HIS_RETURN Acquisition_GetVersionInfo(HACQDESC hAcqDesc, XRpad_VersionInfo *versionInfo);
HIS_RETURN Acquisition_GetIpAdress(HACQDESC hAcqDesc, const char **ipAddress);
HIS_RETURN Acquisition_Test_SDCardPerformance(HACQDESC hAcqDesc, unsigned int buffersize,
                                              double *wbitrate, unsigned int *wmicroseconds,
                                              double *rbitrate, unsigned int *rmicroseconds);