xraylib/Acq.cs


        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetSDCardInfo(IntPtr hAcqDesc, unsigned int* total, unsigned int* avail);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetFakeTemperature(IntPtr hAcqDesc, bool bEnableFakeMode, int iFakeTemperature);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_IdentifyDevice(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Resend_All_Messages(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetLocation(IntPtr hAcqDesc, unsigned int* location);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetNetwork(IntPtr hAcqDesc, unsigned int* network);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetNetworkSpeed(IntPtr hAcqDesc, unsigned int network);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetIdleTimeout(IntPtr hAcqDesc, unsigned short timeout);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetChargeMode(IntPtr hAcqDesc, byte charge_mode);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_VerifyGenuineness(IntPtr hAcqDesc, char (* msg)[128], size_t* msg_len, byte (* md)[20]);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetPrivateKey(IntPtr hAcqDesc, byte (* key_old)[64], byte (* key_new)[64]);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetTemperatureTimeout(IntPtr hAcqDesc, unsigned short timeout);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_ResetTemperatureTimeout(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetTemperatureThresholds(IntPtr hAcqDesc, unsigned int threshold_warning, unsigned int threshold_critical);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetTemperatureThresholds(IntPtr hAcqDesc, unsigned int* threshold_warning, unsigned int* threshold_critical);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetBatteryStatus(IntPtr hAcqDesc, XRpad_BatteryStatus* batteryStatus);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Get_Current_Voltage(IntPtr hAcqDesc, DETECTOR_CURRENT_VOLTAGE* pstructCurrentVoltage);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_CreateFakeShockWarningLevel(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_CreateFakeShockCriticalLevel(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_FactoryResetShock(IntPtr hAcqDesc);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetSystemTime(IntPtr hAcqDesc, char* cDateTime);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetPowerstate(IntPtr hAcqDesc, unsigned int* powerstate);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetAutoPowerOnLocations(IntPtr hAcqDesc, unsigned int* autopoweronlocations);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetAutoPowerOnLocations(IntPtr hAcqDesc, unsigned int autopoweronlocations);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetChargeMode(IntPtr hAcqDesc, byte* charge_mode_req, byte* charge_mode_charger);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_SetSDCardTimeout(IntPtr hAcqDesc, unsigned short sdcard_timeout);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetSDCardTimeout(IntPtr hAcqDesc, unsigned short* sdcard_timeout);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetVersionInfo(IntPtr hAcqDesc, XRpad_VersionInfo* versionInfo);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_GetIpAdress(IntPtr hAcqDesc, const char** ipAddress);
        //        [DllImport("XISL.dll", CharSet = CharSet.Ansi)]
        //        public static extern HIS_RETURN Acquisition_Test_SDCardPerformance(IntPtr hAcqDesc, unsigned int buffersize,
        //                                                      double* wbitrate, unsigned int* wmicroseconds,
        //                                                      double* rbitrate, unsigned int* rmicroseconds);


        //    //error codes

